# receiptor

./: .gitignore  AGENT2_QUICKSTART.md  bootstrap.sh  shutdown.sh  tp.md
backend/: alembic.ini  crud.py  main.py  models.py  pyproject.toml  schemas.py  seed_data.sql
backend/alembic/: env.py
backend/alembic/versions/: 20260125_complete_invoice_schema.py  3496d88d5878_create_receipts_table.py
backend/routers/: invoices.py  receipts.py
backend/services/: cost_code_service.py  traditional_ocr_service.py  vision_ai_service.py
backend/src/: crud.py  database.py  schemas.py
backend/src/routers/: invoices.py
backend/src/services/: __init__.py  comparison_service.py  invoice_storage_service.py  review_workflow_service.py  vendor_matching_service.py
backend/tests/: conftest.py  test_invoices.py  test_receipts.py  test_vendor_matching.py  test_vision_extraction.py
docs/: agent-guide.md  demo.md  system-guide.md  tasks.md
frontend/src/: App.css  App.tsx
frontend/src/components/: ComparisonDashboard.css  ComparisonDashboard.tsx  CostCodeClassifier.css  CostCodeClassifier.tsx  InvoiceReviewForm.css  InvoiceReviewForm.tsx  InvoiceUploadForm.css  InvoiceUploadForm.tsx  ReceiptModal.css  ReceiptModal.tsx  ReceiptsTable.css  ReceiptsTable.tsx  ReviewDashboard.css  ReviewDashboard.tsx  TraditionalOCRProcessor.css  TraditionalOCRProcessor.tsx  VendorMatcher.css  VendorMatcher.tsx  VisionAIProcessor.css  VisionAIProcessor.tsx
frontend/src/services/: api.ts  invoiceApi.ts
frontend/src/types/: invoice.ts  receipt.ts
receipts/: expected.md
